# py2pyd-arg

./: .gitignore  README.md  build.bat  main.py  main1.py  py2pyd.iss  py2pyd.py  pyproject.toml  setup.py
.github/workflows/: build.yml
module/: __init__.py  fileConversion.py  single_py2pyd.py
test_file/: test_copy.py
